2004-04-30

	* libanjuta/interfaces/Makefile.am.iface,
	libanjuta/interfaces/libanjuta.idl: Updated.

2004-04-29  Naba Kumar  <naba@gnome.org>
	
	* libanjuta/interfaces/Makefile.am.iface,
	libanjuta/interfaces/libanjuta.idl: Updated.

2004-04-29  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/giface-idlc-c.pl,
	libanjuta/interfaces/libanjuta.idl: Upgraded.
	* libanjuta/interfaces/Makefile.am.iface: Added.
	
2004-04-28  Naba kumar  <naba@gnome.org>

	* libanjuta/interfaces/giface-idlc-c.pl,
	libanjuta/interfaces/libanjuta.idl: Added anjuta interface
	definitions and wrote a compiler.
	
2004-04-28  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-shell.c: Fixed docs.
	* libanjuta/interfaces/Makefile.am,
	libanjuta/interfaces/ianjuta-file.c,
	libanjuta/interfaces/ianjuta-file.h: Added ianjuta-file.{c,h}
	
	* libanjuta/interfaces/ianjuta-editor.c: Fixed bug.
	
	* manuals/reference/libanjuta/tmpl/anjuta-children.sgml

	* manuals/reference/libanjuta/tmpl/anjuta-plugin.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences-dialog.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-shell.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-ui.sgml: Updated docs.
	* src/anjuta-app.c: Fixed bug.

2004-04-27  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-preferences-dialog.c,
	manuals/Makefile.am: Fixed document bugs and enabled docs
	building.

	* libanjuta/anjuta-preferences-dialog.c,
	manuals/reference/libanjuta/tmpl/anjuta-preferences-dialog.sgml:
	More documentation.
	
	* libanjuta/anjuta-preferences.c,
	manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-children.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-plugin.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-shell.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-ui.sgml:
	Wrote more documentations.

	* (removed) plugins/message-view/imessage-view.c,